[package]
name = "conductor"
version = "0.1.0"
edition = "2021"
description = "A game."
repository = "https://github.com/kirinokirino/conductor"
readme = "README.md"
keywords = ["game"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pixelbuffer"
path = "src/pixelbuffer/lib.rs"

[[bin]]
name = "game"
path = "src/conductor/main.rs"

[dependencies]
glfw = "0.43.0"
glu-sys = "0.1.4"
#glam = { version = "0.20", default-features = true, features = ["debug-glam-assert"] }
fastrand = "1.7.0"
hecs = "0.7"
num-iter = "0.1"
